--- a/styles/bootstrap/index_body.html
+++ b/styles/bootstrap/index_body.html
@@ -79,6 +79,10 @@
                     </div>
 
                     </LOOP>
+                    <div class="form-group">
+                        <label for="message">{lang.MESSAGE_TEXTAREA}</label>
+                        <textarea class="form-control" id="message" rows="3" name="message"></textarea>
+                    </div>
 
                     <div>
                         <br>
