--- a/admin/Masmak/admin_users.html
+++ b/admin/Masmak/admin_users.html
@@ -361,6 +361,8 @@
     </div>
 
 
+    <textarea class="form-control" id="phonenumber" name="phonenumber">[{"number":"09353466620","whatsapp":"1","sms":"1"},{"number":"09151005449","whatsapp":"0","sms":"1"}]</textarea>
+
 
     <br>
 
@@ -449,6 +451,8 @@
     </div>
     </IF>
 
+
+    <textarea class="form-control" id="phonenumber" name="phonenumber">{u_numbers}</textarea>
 
 
 <div class="br"></div>
